syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "ProtoMessage";
option java_package = "com.stream.movie_service";

message MovieRequest{
  string name = 1;
}
message Movieresponse{
  bytes chunk = 1;
}
message DummyResponse{
  string data = 1;
}
service GrpcMovieServie{
  rpc streamMovie(MovieRequest) returns (stream Movieresponse);
  rpc streamMovies(MovieRequest) returns (stream  DummyResponse);
}